--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
    "version": "0.1.0",
    "private": true,
    "dependencies": {
+      "@emailjs/browser": "^4.3.3",
       "@fortawesome/free-solid-svg-icons": "^6.5.2",
       "@fortawesome/react-fontawesome": "^0.2.2",
       "@testing-library/jest-dom": "^5.17.0",
@@ -11,6 +12,7 @@
       "ajv": "^8.16.0",
       "axios": "^1.7.0",
       "bootstrap": "^5.3.3",
+      "dotenv": "^16.4.5",
       "ngrok": "^5.0.0-beta.2",
       "react": "^18.3.1",
       "react-bootstrap": "^2.10.2",
