--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
       "axios": "^1.7.0",
       "bootstrap": "^5.3.3",
       "dotenv": "^16.4.5",
+      "emailjs-com": "^3.2.0",
       "ngrok": "^5.0.0-beta.2",
       "react": "^18.3.1",
       "react-bootstrap": "^2.10.2",
